shuffled deck created on game load

--- a/VideoPoker/VideoPoker.csproj
+++ b/VideoPoker/VideoPoker.csproj
@@ -43,5 +43,8 @@
     <Compile Include="player\Hand.cs" />
     <Compile Include="card\Deck.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
